# nekonote

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  error.rs  main.rs  routes.rs  util.rs
src/routes/: github.rs  healthz.rs
src/routes/google_calendar/: convert.rs  error.rs  mod.rs  schema.rs  tools.rs
src/state/: github.rs  google_calendar.rs  mod.rs
