[package]
name = "nekonote"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
base64 = "0.22.1"
config = "0.15.22"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
google-calendar3 = { version = "7.0.0", features = ["yup-oauth2-service-account"] }
jsonwebtoken = "10.3.0"
octocrab = "0.49.9"
reqwest = { version = "0.13.3", default-features = false, features = [
  "charset",
  "http2",
  "rustls-no-provider",
  "stream",
  "system-proxy",
] }
rmcp = { version = "1.5.0", features = ["transport-streamable-http-server"] }
secrecy = "0.10.3"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "signal"] }
